# auraframes

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  main.py  pyproject.toml
.claude/plans/: modern-python-tooling.md
.github/workflows/: ci.yml
auraframes/: aura.py  cache.py  client.py  exif.py  export.py
auraframes/api/: accountApi.py  activityApi.py  assetApi.py  frameApi.py  notificationApi.py  peopleApi.py  playlistApi.py
auraframes/aws/: awsclient.py  s3client.py  sqsclient.py
auraframes/models/: activity.py  asset.py  frame.py  meta.py  user.py
auraframes/utils/: dt.py  io.py  settings.py
tests/: conftest.py  test_asset_api.py  test_aura.py  test_auth.py  test_cache.py  test_client.py  test_exif.py  test_export.py  test_frames.py  test_upload.py
