[project]
name = "auraframes"
version = "0.1.0"
description = "Unofficial Python client for Aura Frames API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.23.1",
    "h2>=4.1.0",
    "boto3>=1.26.38",
    "pydantic>=1.10.4,<2.0",
    "Pillow>=9.5.0",
    "piexif>=1.1.3",
    "geopy>=2.3.0",
    "tqdm>=4.65.0",
    "loguru>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-httpx>=0.30.0",
    "moto[s3,sqs]>=5.0",
    "mypy>=1.8",
    "ruff>=0.5.0",
    "pre-commit>=3.6",
    "boto3-stubs[s3,sqs,cognito-identity]",
    "types-Pillow",
    "types-tqdm",
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["auraframes"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "boto3.*",
    "botocore.*",
    "geopy.*",
    "piexif.*",
    "h2.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "moto>=5.1.19",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-httpx>=0.36.0",
    "ruff>=0.14.10",
]
